spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ body {
 }
 .service-group-subtitle {
     font-size: 25px;
+    padding-left: 0;
 }
 .salon-services-span {
     font-size: 12px;
@@ -143,7 +144,6 @@ body {
 }
 .outdoor-charges {
     margin-top: 10px;
-    padding: 0 10px 0 10px;
 }
 .conditions {
     margin-top: 80px;
